# ecommerce-product-investigator

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SKILL.md  delivery-summary.md  pyproject.toml
docs/: ecommerce-product-investigator使用说明书.md
references/: api-limits.md  cdp-setup.md  changelog-archive.md  commission-rates.yaml  crossborder-guide.md  domestic-guide.md  fallback-guide.md  output-template.md  platform-guide.md
scripts/: __init__.py  maishou_common.py  maishou_price.py  maishou_search.py  monitor_store.py  profit_calc.py  requirements.txt  text_utils.py
tests/: conftest.py  test_maishou_common.py  test_maishou_price.py  test_maishou_search.py  test_monitor_store.py  test_profit_calc.py  test_text_utils.py
tests/integration/: test_cli.py
