[project]
name = "ecommerce-product-investigator"
version = "0.4.4"
description = "电商选品调研工具 — 国内+跨境双模式，支持全网比价和深度调研"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = ["tests"]
python_files = "test_*.py"
